# time_keeper

./: README.md  package.json  pnpm-lock.yaml
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Clock.vue  Menu.vue
src/types/: index.ts
